{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 204,
  "lineage": "6b3ee1e8-ecb9-4dd9-f283-c457ed1dd564",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "proj_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f9408ba01fb7988",
            "arn": "arn:aws:ec2:eu-west-1:941624500176:elastic-ip/eipalloc-02f9408ba01fb7988",
            "association_id": "eipassoc-0b36503971cd9606a",
            "domain": "vpc",
            "id": "eipalloc-02f9408ba01fb7988",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-03e4e73b8fa58b5da",
            "private_dns": "ip-10-0-1-240.eu-west-1.compute.internal",
            "private_ip": "10.0.1.240",
            "public_dns": "ec2-52-212-212-133.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.212.212.133",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "proj_eip"
            },
            "tags_all": {
              "Name": "proj_eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "eipalloc-02f9408ba01fb7988",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:internet-gateway/igw-0fc918716e8327ca8",
            "id": "igw-0fc918716e8327ca8",
            "owner_id": "941624500176",
            "region": "eu-west-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "igw-0fc918716e8327ca8",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f9408ba01fb7988",
            "association_id": "eipassoc-0b36503971cd9606a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0ecc381ea0f2bcd52",
            "network_interface_id": "eni-03e4e73b8fa58b5da",
            "private_ip": "10.0.1.240",
            "public_ip": "52.212.212.133",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b26d1b121c605b63",
            "tags": {
              "Name": "nat_gw"
            },
            "tags_all": {
              "Name": "nat_gw"
            },
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "nat-0ecc381ea0f2bcd52",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.proj_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.pub_sbn1",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:route-table/rtb-06fbd2037ca0c51c2",
            "id": "rtb-06fbd2037ca0c51c2",
            "owner_id": "941624500176",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ecc381ea0f2bcd52",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "rtb-06fbd2037ca0c51c2",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.proj_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.pub_sbn1",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:route-table/rtb-01c85f2de3dba29d1",
            "id": "rtb-01c85f2de3dba29d1",
            "owner_id": "941624500176",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc918716e8327ca8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "rtb-01c85f2de3dba29d1",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_assc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8105dea4050da56",
            "region": "eu-west-1",
            "route_table_id": "rtb-06fbd2037ca0c51c2",
            "subnet_id": "subnet-0e45bfa956039f4b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "rtbassoc-0c8105dea4050da56",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.proj_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.priv_sbn1",
            "aws_subnet.pub_sbn1",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_rt_assc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01caa685cc23dfab0",
            "region": "eu-west-1",
            "route_table_id": "rtb-06fbd2037ca0c51c2",
            "subnet_id": "subnet-0b6e84def23bb4eec"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "rtbassoc-01caa685cc23dfab0",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_eip.proj_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.priv_sbn2",
            "aws_subnet.pub_sbn1",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0422c2094c433d25b",
            "region": "eu-west-1",
            "route_table_id": "rtb-01c85f2de3dba29d1",
            "subnet_id": "subnet-0b26d1b121c605b63"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "rtbassoc-0422c2094c433d25b",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.pub_sbn1",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081a7426d493870fc",
            "region": "eu-west-1",
            "route_table_id": "rtb-01c85f2de3dba29d1",
            "subnet_id": "subnet-0be0ab416ec8f010c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "rtbassoc-081a7426d493870fc",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.pub_sbn2",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:security-group/sg-0e3d942899840e303",
            "description": "database backend-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3d942899840e303",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL-Aurora from frontend-sg",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce84d1d741dc4c19"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_backend",
            "name_prefix": "",
            "owner_id": "941624500176",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_backend"
            },
            "tags_all": {
              "Name": "sg_backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "sg-0e3d942899840e303",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.web-sg-fe",
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg-fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:security-group/sg-0ce84d1d741dc4c19",
            "description": "Security group for web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce84d1d741dc4c19",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg-fe",
            "name_prefix": "",
            "owner_id": "941624500176",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-fe"
            },
            "tags_all": {
              "Name": "web-sg-fe"
            },
            "timeouts": null,
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "sg-0ce84d1d741dc4c19",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sbn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:subnet/subnet-0e45bfa956039f4b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e45bfa956039f4b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941624500176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "priv_sbn1"
            },
            "tags_all": {
              "Name": "priv_sbn1"
            },
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "subnet-0e45bfa956039f4b7",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sbn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:subnet/subnet-0b6e84def23bb4eec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6e84def23bb4eec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941624500176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "priv_sbn2"
            },
            "tags_all": {
              "Name": "priv_sbn2"
            },
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "subnet-0b6e84def23bb4eec",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sbn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:subnet/subnet-0b26d1b121c605b63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b26d1b121c605b63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941624500176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "pub_sbn1"
            },
            "tags_all": {
              "Name": "pub_sbn1"
            },
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "subnet-0b26d1b121c605b63",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sbn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:subnet/subnet-0be0ab416ec8f010c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be0ab416ec8f010c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "941624500176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "pub_sbn2"
            },
            "tags_all": {
              "Name": "pub_sbn2"
            },
            "vpc_id": "vpc-001da7bb6b6706e14"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "subnet-0be0ab416ec8f010c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proj_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:941624500176:vpc/vpc-001da7bb6b6706e14",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f755f172936840f3",
            "default_route_table_id": "rtb-0da1187cdab2a2e72",
            "default_security_group_id": "sg-0e0a1c15e0ae0e9a2",
            "dhcp_options_id": "dopt-0009874ca1937d087",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001da7bb6b6706e14",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da1187cdab2a2e72",
            "owner_id": "941624500176",
            "region": "eu-west-1",
            "tags": {
              "Name": "proj_vpc"
            },
            "tags_all": {
              "Name": "proj_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "941624500176",
            "id": "vpc-001da7bb6b6706e14",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}